...
              },
              title: const Text(
                "Settings",
              ),
            ),
            ListTile(
              key: const ValueKey("signOut"),
              onTap: () {
                FirebaseAuth.instance.signOut();
                ref.read(userProvider.notifier).logout();
              },
              title: const Text(
                "Sign Out",
...
